[gd_scene load_steps=7 format=3 uid="uid://bfss0mm0kgcau"]

[ext_resource type="Theme" uid="uid://bi8ly86cwk4mf" path="res://assets/Themes/defaultTheme.tres" id="1_6cg77"]
[ext_resource type="Script" uid="uid://d04atoeb4ifjo" path="res://assets/scenes/menu.gd" id="1_j7v1l"]
[ext_resource type="Texture2D" uid="uid://7bn77hxgjd5d" path="res://assets/images/KnightProfile.png" id="3_1c1i7"]
[ext_resource type="Texture2D" uid="uid://c2recrcs4jdm0" path="res://assets/images/KnightProfilePressed.png" id="4_bo2dy"]
[ext_resource type="Texture2D" uid="uid://cp6rij7fgobbq" path="res://assets/images/WitchProfile.png" id="5_ipurd"]
[ext_resource type="Texture2D" uid="uid://c6ungrdwrlush" path="res://assets/images/WitchProfilePressed.png" id="6_rru5k"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_j7v1l")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="TabContainer" type="TabContainer" parent="Menu"]
layout_mode = 0
offset_left = -1.0
offset_right = 319.0
offset_bottom = 180.0
theme = ExtResource("1_6cg77")
current_tab = 0

[node name="Main" type="Control" parent="Menu/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="GoToCharacters" type="Button" parent="Menu/TabContainer/Main"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.18
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 133.0
offset_top = 97.44
offset_right = -128.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6cg77")
theme_override_font_sizes/font_size = 20
text = "Start"

[node name="Leave" type="Button" parent="Menu/TabContainer/Main"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.123
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 129.0
offset_top = 127.434
offset_right = -122.0
offset_bottom = -16.0
theme = ExtResource("1_6cg77")
theme_override_font_sizes/font_size = 20
text = "Leave"

[node name="Lexikon" type="Control" parent="Menu/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Menu/TabContainer/Lexikon"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Settings" type="Control" parent="Menu/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Tutorial" type="Control" parent="Menu/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="CharacterChoice" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterChoice"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Witch" type="TextureButton" parent="CharacterChoice/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("5_ipurd")
texture_pressed = ExtResource("6_rru5k")
ignore_texture_size = true

[node name="Knight" type="TextureButton" parent="CharacterChoice/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("3_1c1i7")
texture_pressed = ExtResource("4_bo2dy")
ignore_texture_size = true

[node name="CharacterInfo" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 32.0
offset_top = -1.0
offset_right = 72.0
offset_bottom = 39.0

[node name="Witch" type="Panel" parent="CharacterInfo"]
layout_mode = 0
offset_left = 9.0
offset_top = 3.0
offset_right = 279.0
offset_bottom = 172.0
theme = ExtResource("1_6cg77")

[node name="WitchText" type="RichTextLabel" parent="CharacterInfo/Witch"]
z_index = 2
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 273.0
offset_bottom = 144.0
scale = Vector2(0.953078, 1.10502)
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "The witch Nyana Ilriel is a skilled magician than uses her Knowledge to shoot magical energy to Enemies or heal herself with powerful spells."

[node name="StartWitch" type="Button" parent="CharacterInfo/Witch"]
layout_mode = 0
offset_left = 123.0
offset_top = 139.0
offset_right = 154.0
offset_bottom = 161.0
theme = ExtResource("1_6cg77")
text = "Start"

[node name="Knight" type="Panel" parent="CharacterInfo"]
layout_mode = 0
offset_left = 9.0
offset_top = 3.0
offset_right = 279.0
offset_bottom = 172.0
theme = ExtResource("1_6cg77")

[node name="KnightText" type="RichTextLabel" parent="CharacterInfo/Knight"]
z_index = 2
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 273.0
offset_bottom = 144.0
scale = Vector2(0.953078, 1.10502)
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "The noble Knight Sir Ive the Mighty is on a mission to help other people by slashing the evil until only good is left. Use his hidden sword igniting to deal more damage."

[node name="StartKnight" type="Button" parent="CharacterInfo/Knight"]
layout_mode = 0
offset_left = 123.0
offset_top = 139.0
offset_right = 131.0
offset_bottom = 147.0
scale = Vector2(1, 0.920005)
theme = ExtResource("1_6cg77")
text = "Start"

[connection signal="pressed" from="Menu/TabContainer/Main/GoToCharacters" to="." method="_on_go_to_characters_pressed"]
[connection signal="pressed" from="Menu/TabContainer/Main/Leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="CharacterChoice/VBoxContainer/Witch" to="." method="_on_witch_pressed"]
[connection signal="pressed" from="CharacterChoice/VBoxContainer/Knight" to="." method="_on_knight_pressed"]
[connection signal="pressed" from="CharacterInfo/Witch/StartWitch" to="." method="_on_start_witch_pressed"]
[connection signal="pressed" from="CharacterInfo/Knight/StartKnight" to="." method="_on_start_knight_pressed"]
